--- a/scss/sections/_first_section.scss
+++ b/scss/sections/_first_section.scss
@@ -1,5 +1,5 @@
 section.first {
-  background-image: url("../../photos/first_section/slideshow_1.png");
+  background-image: url("../photos/first_section/slideshow_1.png");
   display: flex;
   flex-direction: row;
   align-items: center;
