--- a/scss/sections/_forth_section.scss
+++ b/scss/sections/_forth_section.scss
@@ -1,5 +1,5 @@
 section.forth{
-  background-image: url('../../photos/first_section/slideshow_1.png');
+  background-image: url('../photos/first_section/slideshow_1.png');
   display: flex;
   flex-direction: column;
   align-items: center;
